Bug 865448 - Fix alignment issue of debug icon; r=anton
UltraBlame original commit: 7cd75f021d3a7ee164d298ec47bd91d49fc648d0

--- a/browser/devtools/sourceeditor/codemirror/mozilla.css
+++ b/browser/devtools/sourceeditor/codemirror/mozilla.css
@@ -528,3 +528,40 @@ message
 box
 ;
 }
+.
+CodeMirror
+-
+code
+>
+div
+>
+div
+:
+first
+-
+child
+{
+top
+:
+50
+%
+;
+}
+.
+CodeMirror
+-
+gutter
+-
+elt
+{
+transform
+:
+translate
+(
+0
+-
+50
+%
+)
+;
+}
